# doc/openapi.yaml
@@ -12,22 +12,56 @@ servers:
 
 paths:
   /:
-    get:
+    post:
       description: Validate email or phone number
       operationId: api.validate
-      parameters:
-        - in: query
-          name: email
-          description: Email to validate
-          schema:
-            type: string
-            example: dev@zensum.se
-        - in: query
-          name: phone_number
-          description: Phone number to validate
-          schema:
-            type: string
-            example: dev@zensum.se
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              additionalProperties: false
+              oneOf:
+                - required: [pni]
+                - required: [email]
+                - required: [phone_number]
+                - required: [account]
+              properties:
+                email:
+                  type: string
+                  example: dev@zensum.se
+                phone_number:
+                  type: string
+                  description: Phone number to validate
+                  example: 0771304448
+                account:
+                  type: object
+                  additionalProperties: false
+                  required:
+                    - "account_number"
+                  properties:
+                    clearing_number:
+                      type: string
+                      example: "1234"
+                      nullable: true
+                    account_number:
+                      type: string
+                      example: "1234567"
+                    bank_id:
+                      type: integer
+                      example: 23
+                    bank_name:
+                      type: string
+                      example: SEB
+                      description: Bank name
+                    country_code:
+                      enum: ["SE", "NO"]
+                      description: The country the payload is supposed to validate for
+                pni:
+                  type: string
+                  example: "194102137785"
+                  description: Personal national identifier
+
       responses:
         '200':
           description: Valid payload
